# mbqs

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: correlations.json  correlations_exact.json  correlations_samples.json  correlations_sequence.json  protocol_multiple.json  protocol_multiple_rydberg.json  protocol_single.json  protocol_single_rydberg.json  samples.json
notebooks/: analog_rydberg_pulser.ipynb
src/mbqs/: __init__.py  json_utils.py  main.py  types.py
src/mbqs/cli/: __init__.py  arguments.py  correlations.py  display.py  protocol.py  scorer.py
src/mbqs/correlations/: __init__.py  ising.py  samples.py  surge_correlations.py  utils.py
src/mbqs/data/: table_correlations.json  table_surge_times.json
src/mbqs/protocol/: __init__.py  data.py  data_utils.py  definition.py  duration.py  lattice.py  rydberg_mapping.py
src/mbqs/scoring/: __init__.py  metric.py  score.py
src/mbqs/simulations/: __init__.py  ising_qutip.py  ising_tabulated.py  lieb_robinson.py  state.py  time_analysis.py
tests/: test_json_utils.py
tests/test_correlations/: test_samples.py  test_surge_correlations.py  test_utils.py
tests/test_protocol/: test_data_utils.py  test_definition.py  test_duration.py  test_lattice.py  test_rydberg_mapping.py
tests/test_scoring/: test_metric.py  test_score.py
tests/test_simulations/: test_ising_qutip.py  test_ising_tabulated.py  test_lattice.py  test_lieb_robinson.py  test_time_analysis.py
