[project]

name = "mbqs"
version = "1.0-beta"
description = "Many-body quantum score."
readme = "README.md"
requires-python = "~=3.12.0"
license = "EUPL-1.2"
license-files = ["LICEN[CS]E*"]

authors = [
    { name = "Harold Erbin", email = "harold.erbin@gmail.com" },
    { name = "Grégoire Misguich", email = "gregoire.misguich@ipht.fr" },
]

keywords = [
    "quantum computing application benchmark",
    "many-body physics",
    "quantum spin models",
    "quantum simulations",
]

dependencies = ["argcomplete", "numpy", "pulser", "scipy"]


[project.urls]

Homepage = "https://github.com/HaroldErbin/mbqs"


[project.scripts]

mbqs = "mbqs.main:main"


[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"


[project.optional-dependencies]

dev = [
    "ipykernel",
    "pip",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff~=0.15.3",
    "ty",
]

examples = ["emu-mps", "ipykernel"]


[tool.ruff]

target-version = "py312"
line-length = 88
exclude = [".git", ".venv", "__pycache__", "build", "dist"]


[tool.ruff.format]

quote-style = "double"
indent-style = "space"


[tool.ruff.lint]

select = ["E", "F", "I", "D", "B", "UP", "SIM"]
ignore = ["E501", "D200", "D202", "D203", "D212", "SIM108", "SIM118"]
fixable = ["ALL"]


[tool.ruff.lint.per-file-ignores]

# authorize assertion and * import in tests
"tests/*" = ["D", "S101", "F403"]
"*.ipynb" = ["D"]


[tool.ty.environment]
root = ["./src"]


[tool.pytest.ini_options]

addopts = "--cov=mbqs"
pythonpath = "src/mbqs"


[tool.coverage.run]

omit = ["tests/*"]
